Fixed padding on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,7 +108,7 @@ a, a:visited, a:active {
 #contact {
   max-height: auto;
   padding-top: 15vh;
-  padding-bottom: 15vh;
+  padding-bottom: 2vh;
   min-height: 95vh;
   overflow: hidden;
 }
